--- a/wbstyles/camstyle.css
+++ b/wbstyles/camstyle.css
@@ -37,7 +37,7 @@
 }
 
 .app #start-camera{
-    display: none;
+    display: block;
     border-radius: 3px;
     max-width: 400px;
     color: #fff;
