--- a/wbstyles/style.css
+++ b/wbstyles/style.css
@@ -215,6 +215,24 @@ span.sign {
     box-shadow: 0px 1px 1px #666;
 }
 
+.alert {
+    padding: 20px;
+    background-color: #f4810f;
+    color: #fcfcfc;
+    width: 700px;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
 .footer {
     position: fixed;
     right: 0;
