--- a/wbstyles/camstyle.css
+++ b/wbstyles/camstyle.css
@@ -1,13 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
+h3 {
+    text-align: center;
+}
+
+.content {
+    padding-top: 80px;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    grid-gap: 1em;
+}
+
+.cam-head {
+    grid-column: 1/2;
+}
+
+.content > div {
+    background: #eee;
+    padding: 1em;
+}
+
+.content > div:nth-child(odd) {
+    background: #ddd;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}*/
+}*
 #video {
-    width: 60%;
+    width: 500px;
     position: relative;
 
 }
@@ -35,11 +72,12 @@
     padding: 20px;
     background-color: #efefef;
 
-}*/
+}*
 
 .app {
-    width: 60%;
+    width: ;
     position: relative;
+    overflow: scroll;
 }
 
 .app #start-camera {
@@ -177,4 +215,4 @@
     .app .controls #take-photo i{
         font-size: 18px;
     }
-}
+}*/
