--- a/wbstyles/camstyle.css
+++ b/wbstyles/camstyle.css
@@ -6,39 +6,44 @@ h3 {
 }
 
 .content {
-    padding-top: 80px;
+    margin-top: 80px;
     display: grid;
-    grid-template-columns: 4fr 2fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 1em;
 }
 
 .cam-head {
-    grid-column: 1/2;
+    grid-column: 1/3;
+}
+
+.cam  {
+    grid-column: 1/1;
+    height: 480px;
+}
+
+.captured {
+    height: 480px;
+}
+
+.controls {
+    justify-self: center;
 }
 
 .content > div {
-    background: #eee;
+    background: #ddd;
     padding: 1em;
 }
 
-.content > div:nth-child(odd) {
+
+
+
+
+
+/*.content > div:nth-child(odd) {
     background: #ddd;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*{
+{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
