--- a/wbstyles/camstyle.css
+++ b/wbstyles/camstyle.css
@@ -25,6 +25,11 @@ h3 {
     height: 480px;
 }
 
+.posts {
+    grid-row-start: 3:
+    grid-row-end: 4; 
+}
+
 .controls {
     justify-self: center;
 }
