--- a/wbstyles/camstyle.css
+++ b/wbstyles/camstyle.css
@@ -9,20 +9,27 @@ h3 {
     margin-top: 80px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 50px 500px 60px 600px;
     grid-gap: 1em;
+    grid-template-areas:
+    "cam-head cam-head post-head"
+    "cam captured posts"
+    "controls controls2 posts"
+    "merger  merger posts"
 }
 
 .cam-head {
     grid-column: 1/3;
+    grid-area: cam-head
 }
 
 .cam  {
     grid-column: 1/1;
-    height: 480px;
+    grid-area: cam
 }
 
 .captured {
-    height: 480px;
+    grid-area: captured
 }
 
 .posts {
@@ -34,6 +41,9 @@ h3 {
     justify-self: center;
 }
 
+.controls2 {
+    justify-self: center;
+}
 .content > div {
     background: #ddd;
     padding: 1em;
