--- a/wbstyles/blogstyle.css
+++ b/wbstyles/blogstyle.css
@@ -61,6 +61,7 @@ body{
     font-family: 'Fjord One', serif;;
     display: inline-block;
     text-align: center;
+    background: #eee;
 }
 
 .navi {
@@ -338,6 +339,11 @@ footer {
   background: #373737;
   margin-top: auto;
   width: 100%;
+  position: fixed
+  right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
 }
 
 .footer-list-top {
