--- a/wbstyles/camstyle.css
+++ b/wbstyles/camstyle.css
@@ -9,13 +9,14 @@ h3 {
     margin-top: 80px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 50px 500px 60px 600px;
+    grid-template-rows: 50px 500px 45px 300px 1fr;
     grid-gap: 1em;
     grid-template-areas:
     "cam-head cam-head post-head"
     "cam captured posts"
     "controls controls2 posts"
     "merger  merger posts"
+    "footer footer footer "
 }
 
 .cam-head {
@@ -34,24 +35,41 @@ h3 {
 
 .posts {
     grid-row-start: 3:
-    grid-row-end: 4; 
+    grid-row-end: 4;
+    grid-area: posts
 }
 
 .controls {
     justify-self: center;
+    grid-area: controls
 }
 
 .controls2 {
     justify-self: center;
+    grid-area: controls2
 }
+
+.merger {
+    
+    grid-area: merger
+}
+
 .content > div {
     background: #ddd;
     padding: 1em;
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    top: 10%;
+    left: 50%;
+    background-color: #EEEEEE;
+}
 
-
-
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 
 
 /*.content > div:nth-child(odd) {
