--- a/wbstyles/blogstyle.css
+++ b/wbstyles/blogstyle.css
@@ -1,12 +1,16 @@
-p{ line-height: 1em; }
-h1, h2, h3, h4{
+p { line-height: 1em; }
+h1, h2, h3, h4 {
     color: orange;
     font-weight: normal;
     line-height: 1.1em;
     margin: 0 0 .5em 0;
 }
-h1{ font-size: 1.7em; }
-h2{ font-size: 1.5em; }
+h1 { font-size: 1.7em; }
+h2 { 
+  font-size: 1.5em;
+  text-align: center;
+  color: #009688;
+}
 a{
     color: black;
     text-decoration: none;
@@ -51,7 +55,6 @@ body{
 
 #page{
     margin: 5px;
-    overflow: scroll;
 }
 
 #logo{
